[package]
name = "vulkano-triangle"
version = "0.1.0"
authors = ["Jeff Wright <jeff@teamjk.page>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = ""
vulkano-shaders = ""
vulkano-win = ""
cgmath = ""
image = ""
winit = ""
time = ""
