[package]
name = "vulkano-triangle"
version = "0.1.0"
authors = ["Jeff Wright <jeff@teamjk.page>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.14"
vulkano-shaders = "0.14"
vulkano-win = "0.15"
cgmath = "0.17"
image = "0.22"
winit = "0.20.0-alpha4"
